-------------------------------------------------------------------------------
Changes in version 2.21

- Fixed crash bug in STARTTLS handling of loaded DH parameters.

- Added $TLS_COMPAT flag to disable certain TLS (security) features for
  maximum compatibility with buggy clients.

-------------------------------------------------------------------------------
Changes in version 2.20

- Added support for STARTTLS directly in the SMTP protocol.
  Adapted from contribution by John R. Levine.

- Added support for "final ok" rules in mailrules plugin.

- Added hook for debugging plugin invocation (set $MSG_DEBUG=1).

-------------------------------------------------------------------------------
Changes in version 2.15

- Added support for "and" lines to mailrules plugin.

- Modified rbl plugin to log all responses in a single line.

- Fixed minor memory leak in the rbl plugin.

-------------------------------------------------------------------------------
Changes in version 2.13

- Fix build issue with redefining the "accept" function.

- Added support for whitelists in the rbl plugin.

- Added option to skip the Received header for authenticated connections.

-------------------------------------------------------------------------------
Changes in version 2.12

- Added ability for rbl plugin to capture messages before rejecting them.

- Fixed broken use of -lbg-sysdeps in modules.

- Fixed missing plugin-rbl in installed image.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.11

- Updated for bglibs v2

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.10

- Added new "rbl" plugin, to block messages from IPs in an RBL.
